--- a/app.json
+++ b/app.json
@@ -1,9 +1,10 @@
 {
   "expo": {
+    "entryPoint": "./App.js",
     "name": "native-todo",
     "slug": "native-todo",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
