--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "production-test": "expo start --no-dev --minify"
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
